cmake_minimum_required(VERSION 2.8)

project(GStreamerOpenCVExamples)
find_package( OpenCV REQUIRED )
SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++11 -pthread")
file(GLOB SOURCES
    ./*.h
    ./*.cpp
)

set(PRJOECT_NAME_WEBCAM "gstExampleWebcamToRTP")
set(PROJECT_NAME_STREAM "gstExampleRTPtoAppsink")
set(PRJOECT_NAME_WEBCAM_SM "gstExampleWebcamToSM")
set(PROJECT_NAME_SM "gstExampleSMtoAppsink")

add_executable( ${PRJOECT_NAME_WEBCAM} ${SOURCES})
target_link_libraries( ${PRJOECT_NAME_WEBCAM} ${OpenCV_LIBS} )
SET_TARGET_PROPERTIES(${PRJOECT_NAME_WEBCAM} PROPERTIES COMPILE_DEFINITIONS "COMPILE_WEBCAM")

add_executable(${PROJECT_NAME_STREAM} ${SOURCES})
target_link_libraries( ${PROJECT_NAME_STREAM} ${OpenCV_LIBS} )
SET_TARGET_PROPERTIES(${PROJECT_NAME_STREAM} PROPERTIES COMPILE_DEFINITIONS "COMPILE_STREAM")

add_executable(${PRJOECT_NAME_WEBCAM_SM} ${SOURCES})
target_link_libraries( ${PRJOECT_NAME_WEBCAM_SM} ${OpenCV_LIBS} )
SET_TARGET_PROPERTIES(${PRJOECT_NAME_WEBCAM_SM} PROPERTIES COMPILE_DEFINITIONS "COMPILE_WEBCAM_SHARED_MEMORY")

add_executable(${PROJECT_NAME_SM} ${SOURCES})
target_link_libraries( ${PROJECT_NAME_SM} ${OpenCV_LIBS} )
SET_TARGET_PROPERTIES(${PROJECT_NAME_SM} PROPERTIES COMPILE_DEFINITIONS "COMPILE_SHARED_MEMORY_WEBCAM")
